2014-02-09  Roland Clobus <rclobus@rclobus.nl>
	* client/common/main.c: Do not start the main loop when the
	computer player cannot connect to the given port.
	* client/gtk/frontend.h, client/gtk/gui.c, client/gtk/offline.c,
	client/gtk/state.c: Do not quit when the client cannot connect to
	the given port.
	* client/ai/Makefile.am, client/ai/genetic_core.c: Basic integration.

2014-02-08  Roland Clobus <rclobus@rclobus.nl>
	* autogen.sh: Pass along the arguments when the embedded copy of
	gnome-common is used.

2014-01-29  Rodrigo Espiga Gómez <rodrigoespiga@hotmail.com>
	* client/ai/genetic_core.c: Basic functions that will rule how the
	genetic player decides its next action.

2014-01-13  Roland Clobus <rclobus@rclobus.nl>
	* client/callback.h, client/common/player.c, client/gtk/identity.c,
	common/gtk/theme.c, server/admin.c, server/avahi.c, server/player.c,
	server/server.h: Fixed misspellings found by 'make codespell'.
	* Makefile.am: Added new tool, codespell, to fix common misspellings.

2014-01-11  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/chat.c, client/gtk/connect.c, client/gtk/develop.c,
	client/gtk/discard.c, client/gtk/gameover.c, client/gtk/gold.c,
	client/gtk/gui.c, client/gtk/legend.c, client/gtk/monopoly.c,
	client/gtk/name.c, client/gtk/player.c, client/gtk/plenty.c,
	client/gtk/quote.c, client/gtk/resource.c, client/gtk/settingscreen.c,
	client/gtk/trade.c, common/gtk/common_gtk.c, common/gtk/game-rules.c,
	common/gtk/game-settings.c, common/gtk/gtkcompat.h, configure.ac,
	editor/gtk/editor.c, server/gtk/main.c: Fixed GTK3 deprecation warnings
	for [hv]box and similar functions.

2014-01-10  Roland Clobus <rclobus@rclobus.nl>
	* common/gtk/config-gnome.c: Recoded to UTF8.

2014-01-03  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/develop.c: Play more than one development card of the same
	type.

2013-12-19  Roland Clobus <rclobus@rclobus.nl>
	* client/gtk/histogram.c, client/gtk/identity.c, client/gtk/player.c,